--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,10 @@
         "rooveterinaryinc.roo-cline",
         "vsls-contrib.gistfs",
         "github.copilot",
-        "github.copilot-chat"
+        "github.copilot-chat",
+        "anthropic.claude-code",
+        "codeflow-studio.claude-code-extension",
+        "suzuki0430.ccusage-vscode"
       ]
     }
   },
