Add Claude Code VS Code extensions to devcontainer configuration
- Added anthropic.claude-code extension
- Added codeflow-studio.claude-code-extension for cost tracking
- Updated README to document the new extensions
- Fixed missing newline at end of files

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,9 @@
 			"settings": {},
 			"extensions": [
 				"bierner.markdown-mermaid",
-				"shd101wyy.markdown-preview-enhanced"
+				"shd101wyy.markdown-preview-enhanced",
+				"anthropic.claude-code",
+				"codeflow-studio.claude-code-extension"
 			]
 		}
 	},
