--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "Basic Development DevPod",
-  "image": "mcr.microsoft.com/devcontainers/base:debian-bookworm",
+  "image": "mcr.microsoft.com/devcontainers/base:debian12",
   "runArgs": [
     "--privileged"
   ],
